test/spec_vectors/simd_conversions/fail/module_43.wat
(module (func $i8x16.narrow_i16x8_s-arg-empty (result v128) (i8x16.narrow_i16x8_s)))